[gd_scene load_steps=3 format=3 uid="uid://dkw7cmhd50wfc"]

[ext_resource type="Script" uid="uid://tm621f7hhke8" path="res://scenes/ui/elements/selection_tile/selection_tile.gd" id="1_4yma0"]
[ext_resource type="Texture2D" uid="uid://cy5vdtw47lble" path="res://scenes/ui/elements/selection_tile/Manchester City F.C..png" id="1_tqxeu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4yma0")

[node name="TeamButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_constants/icon_max_width = 400
theme_override_font_sizes/font_size = 60
autowrap_mode = 3
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="TeamButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TeamButton/MarginContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="TeamButton/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="TeamLogo" type="TextureRect" parent="TeamButton/MarginContainer/VBox/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("1_tqxeu")
expand_mode = 1

[node name="TeamName" type="Label" parent="TeamButton/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Manchester City FC"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3
max_lines_visible = 1

[node name="OutfieldSection" type="HBoxContainer" parent="TeamButton/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttackSection" type="Label" parent="TeamButton/MarginContainer/VBox/OutfieldSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "ATT"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
max_lines_visible = 1

[node name="MidSection" type="Label" parent="TeamButton/MarginContainer/VBox/OutfieldSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "MID"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
max_lines_visible = 1

[node name="DefenseSection" type="Label" parent="TeamButton/MarginContainer/VBox/OutfieldSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "DEF"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
max_lines_visible = 1

[node name="SectionAverages" type="HBoxContainer" parent="TeamButton/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttackAverage" type="Label" parent="TeamButton/MarginContainer/VBox/SectionAverages"]
layout_mode = 2
size_flags_horizontal = 3
text = "85"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[node name="MidAverage" type="Label" parent="TeamButton/MarginContainer/VBox/SectionAverages"]
layout_mode = 2
size_flags_horizontal = 3
text = "83
"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[node name="DefenseAverage" type="Label" parent="TeamButton/MarginContainer/VBox/SectionAverages"]
layout_mode = 2
size_flags_horizontal = 3
text = "84"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
